--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
+body {
+    color: #333;
+    font-size: 14px;
+    line-height: 1.5;
+}
 .App {
-  text-align: center;
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li {
+    list-style: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    height: 80px;
+    align-items: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header ul {
+    display: flex;
 }
-
-.App-link {
-  color: #61dafb;
+.header ul li {
+    padding: 0 30px;
+    transition: 0.5s;
+    cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header ul li:hover {
+    transform: scale(1.2);
+}
+.contents {
+    padding: 40px 0;
+}
+.contents table td, .contents table th {
+    text-align: center;
+}
+.contents table th {
+    background-color: coral;
+    color: #fff;
+}
+.footer h1 {
+    font-weight: normal;
+    font-size: 22px;
+}
+.contents table.createTable td {
+    text-align: left;
+}
+.contents table.createTable td:nth-child(1) {
+    width: 30%;
+}
+table.createTable input[type="text"] {
+    width: 80%;
+    padding: 8px;
+    border: 1px solid #ccc;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+button {
+    background-color: coral;
+    color: #fff;
+    margin: 8px;
+    border: none;
+    outline: none;
+    padding: 10px 24px;
+    border-radius: 6px;
 }
